<resources>
    <string name="app_name">易物</string>
    <string name="action_settings">Settings</string>
    <string name="menu_pop">热度</string>
    <string name="menu_time">时间</string>
    <string name="menu_price">价格</string>
    <string name="menu_item_1">item1</string>
    <string name="menu_item_2">item2</string>
    <string name="activity_album">相册</string>
    <string name="take_photo">拍摄照片</string>
    <string name="publish_title">标题</string>
    <string name="publish_description">描述以下你的闲置吧</string>
    <string name="publish_price">价格</string>
    <string name="publish_confirm">确定发布</string>
    <string name="publish_category">分类</string>
    <string name="activity_publish">发布</string>
    <string name="add_images">添加图片</string>
    <string name="input_username">请输入用户名</string>
    <string name="login">登陆</string>
    <string name="input_password">请输入密码</string>
    <string name="register">注册</string>
    <string name="detail">详情</string>
</resources>
