<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/md_grey_100"
    android:orientation="vertical"
    tools:context="com.yliec.ewu.module.publish.PublishActivity">

    <include layout="@layout/common_toolbar"/>

    <EditText
        android:id="@+id/et_username"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/input_username"
        android:textSize="16sp"
        android:padding="16dp"
        android:layout_marginTop="32dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        />

    <EditText
        android:id="@+id/et_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/input_password"
        android:textSize="16sp"
        android:padding="16dp"
        android:inputType="textPassword"
        android:layout_marginTop="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        />

    <Button
        android:id="@+id/btn_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/register"
        android:layout_gravity="center"
        android:gravity="center"
        android:textSize="20sp"
        android:padding="4dp"
        android:background="@drawable/selector_login_btn"
        android:layout_marginTop="16dp"
        android:textColor="@color/md_white_1000"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        />

</LinearLayout>
