<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/md_grey_100"
    android:orientation="vertical"
    tools:context="com.yliec.ewu.module.publish.PublishActivity">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/primary"
        android:fitsSystemWindows="true"
        android:minHeight="?attr/actionBarSize"
        app:layout_scrollFlags="enterAlways"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light">

        <Button
            android:id="@+id/btn_register"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:ellipsize="end"
            android:gravity="center"
            android:singleLine="true"
            android:text="@string/register"
            android:textColor="@color/md_white_1000"
            android:textSize="20sp"
            android:background="@android:color/transparent"
            />
    </android.support.v7.widget.Toolbar>

    <EditText
        android:id="@+id/et_username"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/input_username"
        android:textSize="16sp"
        android:padding="16dp"
        android:layout_marginTop="32dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        />

    <EditText
        android:id="@+id/et_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/input_password"
        android:textSize="16sp"
        android:padding="16dp"
        android:inputType="textPassword"
        android:layout_marginTop="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        />

    <Button
        android:id="@+id/btn_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/login"
        android:layout_gravity="center"
        android:gravity="center"
        android:textSize="20sp"
        android:padding="4dp"
        android:background="@drawable/selector_login_btn"
        android:layout_marginTop="16dp"
        android:textColor="@color/md_white_1000"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        />

    <ProgressBar
        android:id="@+id/pb_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="invisible"
        android:layout_gravity="center"
        android:layout_marginTop="16dp"
        />

</LinearLayout>
