<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/md_grey_100"
    android:orientation="vertical"
    tools:context="com.yliec.ewu.module.publish.PublishActivity">

    <include
        android:id="@+id/toolbar"
        layout="@layout/common_toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <LinearLayout
        android:id="@+id/ll_container_one"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/toolbar"
        android:background="@color/md_white_1000"
        android:orientation="vertical"
        android:padding="16dp"
        >

        <EditText
            android:id="@+id/et_title"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/publish_title"
            android:padding="16dp"

            />

        <EditText
            android:id="@+id/et_description"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:gravity="start"
            android:hint="@string/publish_description"
            android:padding="16dp"
            />


        <android.support.v7.widget.RecyclerView
            android:id="@+id/rv_upload_image"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

        </android.support.v7.widget.RecyclerView>

        <LinearLayout
            android:id="@+id/ll_location"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="8dp"
            >

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:src="@drawable/ic_edit_location_black_24dp"
                />

            <TextView
                android:id="@+id/tv_location"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom"
                android:layout_marginLeft="8dp"
                android:text="重庆 江北区"
                />
        </LinearLayout>
    </LinearLayout>

    <RelativeLayout
        android:id="@+id/rl_category_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/ll_container_one"
        android:layout_marginTop="16dp"
        android:background="@color/md_white_1000"
        android:orientation="vertical"
        android:padding="16dp"
        >

        <TextView
            android:id="@+id/tv_publish_price"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingBottom="8dp"
            android:paddingTop="8dp"
            android:text="@string/publish_price"
            android:textSize="16sp"
            />

        <EditText
            android:id="@+id/et_price"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@id/tv_publish_price"
            android:layout_marginLeft="32dp"
            android:layout_toRightOf="@id/tv_publish_price"
            android:hint="0.00"
            android:inputType="numberDecimal"
            />

        <TextView
            android:id="@+id/tv_publish_category"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/tv_publish_price"
            android:layout_marginTop="8dp"
            android:paddingTop="8dp"
            android:text="@string/publish_category"
            android:textSize="16sp"
            />

        <TextView
            android:id="@+id/tv_publish_category_real"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@id/tv_publish_category"
            android:layout_below="@id/et_price"
            android:layout_marginLeft="32dp"
            android:layout_toRightOf="@id/tv_publish_category"
            android:paddingTop="8dp"
            android:text="请选择分类"
            android:textSize="16sp"
            />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_below="@id/et_price"
            android:paddingTop="8dp"
            android:src="@drawable/ic_keyboard_arrow_right_black_24dp"
            />

    </RelativeLayout>

    <Button
        android:id="@+id/btn_publish"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:text="@string/publish_confirm"
        />


    <!--<com.facebook.drawee.view.SimpleDraweeView-->
    <!--android:id="@+id/sdv_pub"-->
    <!--android:layout_width="200dp"-->
    <!--android:layout_height="200dp"/>-->

</RelativeLayout>
